--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
   "version": "0.1.0",
   "license": "MIT",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "engines": {
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "size": "size-limit",
-    "analyze": "size-limit --why"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
+    "test": "jest",
+    "clean": "rimraf dist",
+    "build:esm": "tsc --project tsconfig.esm.json && tsc-alias -p tsconfig.esm.json",
+    "build:cjs": "tsc --project tsconfig.cjs.json && tsc-alias -p tsconfig.cjs.json",
+    "build": "npm run clean && npm run build:esm && npm run build:cjs",
+    "prepare-doc": "rimraf docs && npx typedoc"
   },
   "prettier": {
     "printWidth": 80,
@@ -30,35 +23,28 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "shyft-js",
-  "author": "impin2rex",
-  "module": "dist/shyft-js.esm.js",
-  "size-limit": [
-    {
-      "path": "dist/shyft-js.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/shyft-js.esm.js",
-      "limit": "10 KB"
-    }
-  ],
+  "name": "@shyft-to/js",
+  "author": "shyft-to",
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^8.0.0",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/bs58": "^4.0.1",
     "@types/jest": "^28.1.6",
-    "husky": "^8.0.1",
-    "size-limit": "^8.0.0",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "babel-jest": "^29.4.1",
+    "dotenv": "^16.0.3",
+    "jest": "^29.4.1",
+    "rimraf": "^4.1.2",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.2",
+    "tsconfig-paths": "^4.1.2",
+    "typedoc": "^0.23.24",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@metaplex/js": "^4.12.0",
-    "@solana/wallet-adapter-base": "^0.9.9",
-    "@solana/wallet-adapter-react": "^0.15.8",
-    "@solana/wallet-adapter-wallets": "^0.17.0",
     "@solana/web3.js": "^1.50.1",
+    "axios": "^1.2.6",
     "bs58": "^5.0.0"
   }
 }
